aks_theme_park/themepark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: themepark-deployment

spec:
  selector:
    matchLabels:
      app: themepark
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: themepark
    spec:
      containers:
      - name: themepark
        image: dheang/theme-park-api:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
