aks_theme_park/themepark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: themepark-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: themepark
