aks_theme_park/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: themepark-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: themepark-secret
      hosts:
        - kubernetes.dh-datascientest.cloudns.ph
  rules:
  - host: kubernetes.dh-datascientest.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: themepark-service
              port:
                number: 80
